--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@ body {
 	font-family: Trebuchet MS, sans-serif;
 	font-size: 16px;
 	color: #192941;
-	background: ghostwhite;
-	background-color: rgb(248, 248, 255);
+	background: #ccc;
 }
 
 .top-container {
@@ -79,8 +78,8 @@ body {
 	margin-top: -200px;
 }
 
-.angle:nth-child(even) {
-	background: #ccc; /* can add default image as a background */
+.angle:nth-child(even){
+	background: #ccc url(../img/grey.png) repeat;
 	-webkit-transform: rotate(-5deg);
 	-moz-transform: rotate(-5deg);
 	-o-transform: rotate(-5deg);
