--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ body {
 	line-height: 80px;
 	margin-bottom: 20px;
 	/* maybe a different font family */
+	background: rgba(255,255,255,0.7);
 }
 .content h3 a {
 	color: black;
